@@ -53,6 +53,11 @@ class TestGemIndexer < RubyGemTestCase
     assert_indexed quickdir, "index"
     assert_indexed quickdir, "index.rz"
 
+    assert_indexed quickdir, "latest_index"
+    assert_indexed quickdir, "latest_index.rz"
+
+    assert_no_match %r|a-1|, File.read(File.join(quickdir, 'latest_index'))
+
     assert_indexed quickdir, "#{@a1.full_name}.gemspec.rz"
     assert_indexed quickdir, "#{@a2.full_name}.gemspec.rz"
     assert_indexed quickdir, "#{@b2.full_name}.gemspec.rz"
